--- a/main.css
+++ b/main.css
@@ -87,25 +87,33 @@ header .container {
 
 .guias nav li a {
     color: #ecf0f1;
-    flex-wrap: wrap;
     position: relative;
     left: 550px;
     text-decoration: none;
     font-weight: 400;
 }
 
-.guias nav li a:hover {
-    color: #ecf0f1;
-    flex-wrap: wrap;
-    position: relative;
-    left: 550px;
-    text-decoration: underline;
-    text-underline-offset: 10%;
+.guias nav li a::before {
+    content: '';
+    position: absolute;
+    width: 0%;
+    height: 2px; /* altura do sublinhado */
+    bottom: 4px; /* ajuste para o sublinhado não ficar colado no texto */
+    right: 50%;
+    background-color: #ecf0f1; /* cor do sublinhado */
+    visibility: hidden;
+    transform: translate(-50%, 0) scaleX(0);
+    transition: all 0.4s ease-in-out;
+}
+
+.guias nav li a:hover::before {
+    visibility: visible;
+    width: 100%;
+    transform: translate(50%, 0) scaleX(1);
 }
 
 section .container{
-    background-color: #ecf0f1;
-    height: 60vh;
+    background-color: #ecf0f1;;
     width: 100%;
     flex-wrap: wrap;
 }
@@ -159,7 +167,6 @@ section img {
 
 .pacifico {
     max-height: 388px;
-    background-color : black;
 }
 
 .pacifico img {
@@ -235,7 +242,7 @@ section img {
     width: 480px;
     height: 300px;
     position: relative;
-    bottom: 26vh;
+    top: -23vh;
     left: 3%;
 }
 
