--- a/main.css
+++ b/main.css
@@ -98,18 +98,16 @@ header .container {
     position: absolute;
     width: 0%;
     height: 2px; /* altura do sublinhado */
-    bottom: 4px; /* ajuste para o sublinhado não ficar colado no texto */
-    right: 50%;
+    bottom: 2px; /* ajuste para o sublinhado não ficar colado no texto */
+    left: 0;
     background-color: #ecf0f1; /* cor do sublinhado */
     visibility: hidden;
-    transform: translate(-50%, 0) scaleX(0);
-    transition: all 0.4s ease-in-out;
+    transition: all 0.3s ease-in-out;
 }
 
 .guias nav li a:hover::before {
     visibility: visible;
     width: 100%;
-    transform: translate(50%, 0) scaleX(1);
 }
 
 section .container{
